--- a/apps/formva/package.json
+++ b/apps/formva/package.json
@@ -1,6 +1,21 @@
 {
     "name": "formva",
-    "version": "0.0.0",
+    "version": "0.0.1",
+    "description": "A vanilla form validation library that works zod",
+    "homepage": "https://github.com/plsankar/formva",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/plsankar/formva.git"
+    },
+    "author": {
+        "name": "Lakshmi Sankar",
+        "email": "me@lakshmisankar.com",
+        "url": "https://lakshmisankar.com"
+    },
+    "bugs": {
+        "url": "https://github.com/plsankar/formva/issues"
+    },
+    "license": "MIT",
     "type": "module",
     "main": "dist/index.cjs.js",
     "module": "dist/index.js",
