--- a/apps/formva/package.json
+++ b/apps/formva/package.json
@@ -1,6 +1,6 @@
 {
     "name": "formva",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A vanilla form validation library that works zod",
     "homepage": "https://github.com/plsankar/formva",
     "repository": {
@@ -41,17 +41,17 @@
         "prepublish": "npm run build"
     },
     "devDependencies": {
-        "@repo/typescript-config": "workspace:*",
         "@repo/eslint-config": "workspace:*",
+        "@repo/typescript-config": "workspace:*",
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-typescript": "^12.1.2",
-        "@types/node": "^20.14.11",
-        "eslint": "^9.22.0",
-        "rollup": "^4.35.0",
-        "rollup-plugin-dts": "^6.1.1",
+        "@types/node": "^20.17.28",
+        "eslint": "^9.23.0",
+        "rollup": "^4.38.0",
+        "rollup-plugin-dts": "^6.2.1",
         "tslib": "^2.8.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.8.2"
     },
     "peerDependencies": {
         "zod": "^3.23.8"
@@ -60,6 +60,7 @@
     "files": [
         "./dist",
         "package.json",
-        "README.md"
+        "README.md",
+        "LICENSE"
     ]
 }
